test/type/fail/duplicate_local_arg.j
class A {
  Void main(Int b) {
    Int b;
    return;
  }
}
